syntax = "proto3";

package containerd.v1;

import "gogoproto/gogo.proto";
import "github.com/docker/containerd/api/types/mount/mount.proto";
import "github.com/docker/containerd/api/types/descriptor/descriptor.proto";

service RootFS {
	rpc Prepare(PrepareRequest) returns (PrepareResponse);
	rpc InitMounts(InitMountsRequest) returns (MountResponse);
	rpc Mounts(MountsRequest) returns (MountResponse);
}

message PrepareRequest {
	repeated containerd.v1.types.Descriptor layers = 1;
}

message PrepareResponse {
	string chainid = 1 [(gogoproto.customtype) = "github.com/opencontainers/go-digest.Digest", (gogoproto.nullable) = false, (gogoproto.customname) = "ChainID"];
}

message InitMountsRequest {
	string name = 1;
	string chainID = 2 [(gogoproto.customtype) = "github.com/opencontainers/go-digest.Digest", (gogoproto.nullable) = false, (gogoproto.customname) = "ChainID"];
	bool Readonly = 3;
}

message MountsRequest {
	string name = 1;
}

message MountResponse {
	repeated containerd.v1.types.Mount mounts = 1;
}
